--- a/07_Loops/index.html
+++ b/07_Loops/index.html
@@ -6,6 +6,7 @@
     <title>Loops</title>
   </head>
   <body>
-    <script src="loops.js"></script>
+    <script src="01_loopsIntro.js"></script>
+    <script src="02_nestedLoops.js"></script>
   </body>
 </html>
