--- a/07_Loops/index.html
+++ b/07_Loops/index.html
@@ -6,7 +6,8 @@
     <title>Loops</title>
   </head>
   <body>
-    <script src="01_loopsIntro.js"></script>
-    <script src="02_nestedLoops.js"></script>
+    <!-- <script src="01_loopsIntro.js"></script>
+    <script src="02_nestedLoops.js"></script> -->
+    <script src="03_whileLoops.js"></script>
   </body>
 </html>
