Update loops notes

--- a/07_Loops/index.html
+++ b/07_Loops/index.html
@@ -8,6 +8,7 @@
   <body>
     <!-- <script src="01_loopsIntro.js"></script>
     <script src="02_nestedLoops.js"></script> -->
-    <script src="03_whileLoops.js"></script>
+    <!-- <script src="03_whileLoops.js"></script> -->
+    <script src="04_forOfLoops.js"></script>
   </body>
 </html>
