Update loops notes

--- a/07_Loops/index.html
+++ b/07_Loops/index.html
@@ -6,9 +6,10 @@
     <title>Loops</title>
   </head>
   <body>
-    <!-- <script src="01_loopsIntro.js"></script>
-    <script src="02_nestedLoops.js"></script> -->
+    <!-- <script src="01_loopsIntro.js"></script> -->
+    <!-- <script src="02_nestedLoops.js"></script> -->
     <!-- <script src="03_whileLoops.js"></script> -->
-    <script src="04_forOfLoops.js"></script>
+    <!-- <script src="04_forOfLoops.js"></script> -->
+    <script src="05_forInLoops.js"></script>
   </body>
 </html>
