Update functions notes

--- a/08_Functions/index.html
+++ b/08_Functions/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <script src="01_firstFunction.js"></script>
+    <script src="02_isValidPassword.js"></script>
   </body>
 </html>
