Update functions notes

--- a/08_Functions/index.html
+++ b/08_Functions/index.html
@@ -8,5 +8,7 @@
   <body>
     <script src="01_firstFunction.js"></script>
     <script src="02_isValidPassword.js"></script>
+    <script src="03_avgValue.js"></script>
+    <script src="04_isPangram.js"></script>
   </body>
 </html>
