Update functions notes

--- a/08_Functions/index.html
+++ b/08_Functions/index.html
@@ -10,5 +10,6 @@
     <script src="02_isValidPassword.js"></script>
     <script src="03_avgValue.js"></script>
     <script src="04_isPangram.js"></script>
+    <script src="05_getCard.js"></script>
   </body>
 </html>
