--- a/08_Functions/index.html
+++ b/08_Functions/index.html
@@ -11,5 +11,6 @@
     <script src="03_avgValue.js"></script>
     <script src="04_isPangram.js"></script>
     <script src="05_getCard.js"></script>
+    <script src="06_functionScope.js"></script>
   </body>
 </html>
