Update functions notes

--- a/08_Functions/index.html
+++ b/08_Functions/index.html
@@ -12,5 +12,6 @@
     <script src="04_isPangram.js"></script>
     <script src="05_getCard.js"></script>
     <script src="06_functionScope.js"></script>
+    <script src="07_functionStatements.js"></script>
   </body>
 </html>
