Update functions notes

--- a/08_Functions/index.html
+++ b/08_Functions/index.html
@@ -13,5 +13,6 @@
     <script src="05_getCard.js"></script>
     <script src="06_functionScope.js"></script>
     <script src="07_functionStatements.js"></script>
+    <script src="08_higherOrderFunctions.js"></script>
   </body>
 </html>
