--- a/08_Functions/index.html
+++ b/08_Functions/index.html
@@ -14,5 +14,6 @@
     <script src="06_functionScope.js"></script>
     <script src="07_functionStatements.js"></script>
     <script src="08_higherOrderFunctions.js"></script>
+    <script src="09_funcsAsArguments.js"></script>
   </body>
 </html>
