Update functions notes

--- a/08_Functions/index.html
+++ b/08_Functions/index.html
@@ -15,5 +15,6 @@
     <script src="07_functionStatements.js"></script>
     <script src="08_higherOrderFunctions.js"></script>
     <script src="09_funcsAsArguments.js"></script>
+    <script src="10_funcsAsReturnValues.js"></script>
   </body>
 </html>
