Update functions notes

--- a/08_Functions/index.html
+++ b/08_Functions/index.html
@@ -6,6 +6,7 @@
     <title>Functions</title>
   </head>
   <body>
+    <button>Don't Click Me</button>
     <script src="01_firstFunction.js"></script>
     <script src="02_isValidPassword.js"></script>
     <script src="03_avgValue.js"></script>
@@ -16,5 +17,6 @@
     <script src="08_higherOrderFunctions.js"></script>
     <script src="09_funcsAsArguments.js"></script>
     <script src="10_funcsAsReturnValues.js"></script>
+    <script src="11_callbacks.js"></script>
   </body>
 </html>
