--- a/08_Functions/index.html
+++ b/08_Functions/index.html
@@ -18,5 +18,6 @@
     <script src="09_funcsAsArguments.js"></script>
     <script src="10_funcsAsReturnValues.js"></script>
     <script src="11_callbacks.js"></script>
+    <script src="12_hoisting.js"></script>
   </body>
 </html>
