Update array functions notes

--- a/09_Array_Callback_Methods/index.html
+++ b/09_Array_Callback_Methods/index.html
@@ -8,5 +8,6 @@
   <body>
     <script src="01_forEach.js"></script>
     <script src="02_map.js"></script>
+    <script src="03_arrowFunctions.js"></script>
   </body>
 </html>
