--- a/09_Array_Callback_Methods/index.html
+++ b/09_Array_Callback_Methods/index.html
@@ -9,5 +9,6 @@
     <script src="01_forEach.js"></script>
     <script src="02_map.js"></script>
     <script src="03_arrowFunctions.js"></script>
+    <script src="04_find.js"></script>
   </body>
 </html>
