Update array functions notes

--- a/09_Array_Callback_Methods/index.html
+++ b/09_Array_Callback_Methods/index.html
@@ -10,5 +10,7 @@
     <script src="02_map.js"></script>
     <script src="03_arrowFunctions.js"></script>
     <script src="04_find.js"></script>
+    <script src="05_filter.js"></script>
+    <script src="06_every_some.js"></script>
   </body>
 </html>
