--- a/09_Array_Callback_Methods/index.html
+++ b/09_Array_Callback_Methods/index.html
@@ -12,5 +12,6 @@
     <script src="04_find.js"></script>
     <script src="05_filter.js"></script>
     <script src="06_every_some.js"></script>
+    <script src="07_sort.js"></script>
   </body>
 </html>
