Update array functions notes

--- a/09_Array_Callback_Methods/index.html
+++ b/09_Array_Callback_Methods/index.html
@@ -13,5 +13,6 @@
     <script src="05_filter.js"></script>
     <script src="06_every_some.js"></script>
     <script src="07_sort.js"></script>
+    <script src="08_reduce.js"></script>
   </body>
 </html>
