--- a/09_Array_Callback_Methods/index.html
+++ b/09_Array_Callback_Methods/index.html
@@ -14,5 +14,6 @@
     <script src="06_every_some.js"></script>
     <script src="07_sort.js"></script>
     <script src="08_reduce.js"></script>
+    <script src="09_reduce_part2.js"></script>
   </body>
 </html>
