--- a/09_Array_Callback_Methods/index.html
+++ b/09_Array_Callback_Methods/index.html
@@ -15,5 +15,6 @@
     <script src="07_sort.js"></script>
     <script src="08_reduce.js"></script>
     <script src="09_reduce_part2.js"></script>
+    <script src="10_reduce_part3.js"></script>
   </body>
 </html>
