Update misc features notes

--- a/10_Misc_Features/index.html
+++ b/10_Misc_Features/index.html
@@ -7,5 +7,7 @@
   </head>
   <body>
     <script src="01_default_parameters.js"></script>
+    <script src="02_spread_functions.js"></script>
+    <script src="03_spread_arrays.js"></script>
   </body>
 </html>
