Update misc features notes

--- a/10_Misc_Features/index.html
+++ b/10_Misc_Features/index.html
@@ -10,5 +10,6 @@
     <script src="02_spread_functions.js"></script>
     <script src="03_spread_arrays.js"></script>
     <script src="04_spread_objects.js"></script>
+    <script src="05_rest.js"></script>
   </body>
 </html>
