--- a/10_Misc_Features/index.html
+++ b/10_Misc_Features/index.html
@@ -11,5 +11,6 @@
     <script src="03_spread_arrays.js"></script>
     <script src="04_spread_objects.js"></script>
     <script src="05_rest.js"></script>
+    <script src="06_destructuring.js"></script>
   </body>
 </html>
