Update object method notes

--- a/11_Object_Methods_And_This/index.html
+++ b/11_Object_Methods_And_This/index.html
@@ -9,5 +9,6 @@
     <script src="01_shorthand_properties.js"></script>
     <script src="02_computed_properties.js"></script>
     <script src="03_object_methods.js"></script>
+    <script src="04_method_shorthand.js"></script>
   </body>
 </html>
