Update object method notes

--- a/11_Object_Methods_And_This/index.html
+++ b/11_Object_Methods_And_This/index.html
@@ -10,5 +10,7 @@
     <script src="02_computed_properties.js"></script>
     <script src="03_object_methods.js"></script>
     <script src="04_method_shorthand.js"></script>
+    <script src="05_this_intro.js"></script>
+    <script src="06_this_in_methods.js"></script>
   </body>
 </html>
