Update object method notes

--- a/11_Object_Methods_And_This/index.html
+++ b/11_Object_Methods_And_This/index.html
@@ -12,5 +12,6 @@
     <script src="04_method_shorthand.js"></script>
     <script src="05_this_intro.js"></script>
     <script src="06_this_in_methods.js"></script>
+    <script src="07_this_invocation_context.js"></script>
   </body>
 </html>
