Update object method notes

--- a/11_Object_Methods_And_This/index.html
+++ b/11_Object_Methods_And_This/index.html
@@ -13,5 +13,6 @@
     <script src="05_this_intro.js"></script>
     <script src="06_this_in_methods.js"></script>
     <script src="07_annoyomatic.js"></script>
+    <script src="08_card_deck.js"></script>
   </body>
 </html>
