Update DOM manipulation notes

--- a/12_DOM_Manipulation/index.html
+++ b/12_DOM_Manipulation/index.html
@@ -48,5 +48,6 @@
       </ul>
     </section>
     <script src="02_getElementById.js"></script>
+    <script src="03_getElementsByTagName.js"></script>
   </body>
 </html>
