Update DOM manipulation notes

--- a/12_DOM_Manipulation/index.html
+++ b/12_DOM_Manipulation/index.html
@@ -49,5 +49,6 @@
     </section>
     <script src="02_getElementById.js"></script>
     <script src="03_getElementsByTagName.js"></script>
+    <script src="04_getElementsByClassName.js"></script>
   </body>
 </html>
