Update DOM notes

--- a/12_DOM_Manipulation/index.html
+++ b/12_DOM_Manipulation/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>getElementById</title>
+    <title>DOM Manipulation</title>
     <link rel="stylesheet" href="app.css" />
   </head>
 
@@ -50,5 +50,7 @@
     <script src="02_getElementById.js"></script>
     <script src="03_getElementsByTagName.js"></script>
     <script src="04_getElementsByClassName.js"></script>
+    <script src="05_querySelector.js"></script>
+    <script src="06_innerText_textContent.js"></script>
   </body>
 </html>
