--- a/12_DOM_Manipulation/index.html
+++ b/12_DOM_Manipulation/index.html
@@ -23,8 +23,10 @@
       repellendus similique.
     </p>
     <form action="">
-      <input type="text" placeholder="Bear Name" />
+      <input type="text" placeholder="Bear Name" value="Taco" />
       <input type="password" placeholder="password" />
+      <input type="checkbox" />
+      <input type="range" min="100" max="500" />
       <input type="submit" />
     </form>
     <p class="special">
@@ -35,6 +37,9 @@
       <li>Second Thing</li>
       <li class="special">Third Thing</li>
     </ul>
+    <a href="http://www.cats.com/cute" target="_blank"
+      >Cats are adorable sometimes</a
+    >
     <img
       id="bear-photo"
       src="https://images.unsplash.com/photo-1573920111312-04f1b25c6b85?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1268&q=80"
@@ -52,5 +57,7 @@
     <script src="04_getElementsByClassName.js"></script>
     <script src="05_querySelector.js"></script>
     <script src="06_innerText_textContent.js"></script>
+    <script src="07_innerHTML.js"></script>
+    <script src="08_value_src_href.js"></script>
   </body>
 </html>
