Update DOM notes

--- a/12_DOM_Manipulation/index.html
+++ b/12_DOM_Manipulation/index.html
@@ -59,5 +59,6 @@
     <script src="06_innerText_textContent.js"></script>
     <script src="07_innerHTML.js"></script>
     <script src="08_value_src_href.js"></script>
+    <script src="09_getting_setting_attributes.js"></script>
   </body>
 </html>
