Update DOM notes

--- a/12_DOM_Manipulation/index.html
+++ b/12_DOM_Manipulation/index.html
@@ -60,5 +60,6 @@
     <script src="07_innerHTML.js"></script>
     <script src="08_value_src_href.js"></script>
     <script src="09_getting_setting_attributes.js"></script>
+    <script src="10_parent_children_siblings.js"></script>
   </body>
 </html>
