--- a/12_DOM_Manipulation/index.html
+++ b/12_DOM_Manipulation/index.html
@@ -61,5 +61,6 @@
     <script src="08_value_src_href.js"></script>
     <script src="09_getting_setting_attributes.js"></script>
     <script src="10_parent_children_siblings.js"></script>
+    <script src="11_changing_styles.js"></script>
   </body>
 </html>
