Update DOM notes

--- a/12_DOM_Manipulation/index.html
+++ b/12_DOM_Manipulation/index.html
@@ -62,5 +62,6 @@
     <script src="09_getting_setting_attributes.js"></script>
     <script src="10_parent_children_siblings.js"></script>
     <script src="11_changing_styles.js"></script>
+    <script src="12_getComputedStyle.js"></script>
   </body>
 </html>
