--- a/12_DOM_Manipulation/index.html
+++ b/12_DOM_Manipulation/index.html
@@ -63,5 +63,6 @@
     <script src="10_parent_children_siblings.js"></script>
     <script src="11_changing_styles.js"></script>
     <script src="12_getComputedStyle.js"></script>
+    <script src="13_manipulating_classes.js"></script>
   </body>
 </html>
