Update DOM notes

--- a/12_DOM_Manipulation/index.html
+++ b/12_DOM_Manipulation/index.html
@@ -22,6 +22,13 @@
       placeat excepturi in porro minima quo laudantium temporibus, aliquid
       repellendus similique.
     </p>
+
+    <ul id="todos">
+      <li class="todo">Mow the Lawn <button>X</button></li>
+      <li class="todo">Milk the cows <button>X</button></li>
+      <li class="todo">Feed the alpacas <button>X</button></li>
+    </ul>
+
     <form action="">
       <input type="text" placeholder="Bear Name" value="Taco" />
       <input type="password" placeholder="password" />
