Update DOM notes

--- a/12_DOM_Manipulation/index.html
+++ b/12_DOM_Manipulation/index.html
@@ -71,5 +71,6 @@
     <script src="11_changing_styles.js"></script>
     <script src="12_getComputedStyle.js"></script>
     <script src="13_manipulating_classes.js"></script>
+    <script src="14_creating_elements.js"></script>
   </body>
 </html>
