Update DOM notes

--- a/12_DOM_Manipulation/index.html
+++ b/12_DOM_Manipulation/index.html
@@ -24,9 +24,9 @@
     </p>
 
     <ul id="todos">
-      <li class="todo">Mow the Lawn <button>X</button></li>
-      <li class="todo">Milk the cows <button>X</button></li>
-      <li class="todo">Feed the alpacas <button>X</button></li>
+      <li class="todo">Mow the Lawn <button>&#10006;</button></li>
+      <li class="todo">Milk the cows <button>&#10006;</button></li>
+      <li class="todo">Feed the alpacas <button>&#10006;</button></li>
     </ul>
 
     <form action="">
@@ -72,5 +72,6 @@
     <script src="12_getComputedStyle.js"></script>
     <script src="13_manipulating_classes.js"></script>
     <script src="14_creating_elements.js"></script>
+    <script src="15_append_prepend_insertBefore.js"></script>
   </body>
 </html>
