Update DOM notes

--- a/12_DOM_Manipulation/index.html
+++ b/12_DOM_Manipulation/index.html
@@ -72,6 +72,7 @@
     <script src="12_getComputedStyle.js"></script>
     <script src="13_manipulating_classes.js"></script>
     <script src="14_creating_elements.js"></script>
-    <script src="15_append_prepend_insertBefore.js"></script>
+    <script src="15_append_prepend0_insertBefore.js"></script>
+    <script src="16_removeChild_remove.js"></script>
   </body>
 </html>
