--- a/13_NBA_Scores_Chart/index.html
+++ b/13_NBA_Scores_Chart/index.html
@@ -7,6 +7,13 @@
     <title>NBA Score Table</title>
   </head>
   <body>
+    <section id="gs">
+      <h2>Golden State Warriors</h2>
+    </section>
+
+    <section id="hr">
+      <h2>Houston Rockets</h2>
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
