Update DOM notes

--- a/14_Events/index.html
+++ b/14_Events/index.html
@@ -12,7 +12,7 @@
 
     <button id="clicker">Clicker</button>
 
-    <button id="event-button"></button>
+    <button id="event-button">Event Button</button>
 
     <form>
       <input
@@ -23,6 +23,117 @@
         max="50"
       />
     </form>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda itaque
+      hic eligendi temporibus, impedit quidem dicta minima facilis mollitia
+      cupiditate consequatur, beatae odit a enim eveniet id dolores. Numquam
+      omnis hic possimus ullam similique. Recusandae qui aperiam, dolor sit
+      laborum reprehenderit, minima commodi voluptas esse tempore modi
+      voluptates dolorum culpa et sint aspernatur cumque ducimus porro totam
+      beatae iste? Ab consequatur aut provident quasi, delectus, necessitatibus
+      perferendis eligendi similique sunt ullam laboriosam eum et recusandae
+      nisi at architecto quis sed quidem deleniti mollitia. Saepe esse totam
+      cumque eveniet voluptatem possimus amet alias laudantium incidunt
+      provident, et quia praesentium ratione voluptatibus eligendi numquam,
+      perferendis ipsam. Nulla quod rerum explicabo ipsa voluptatibus facilis
+      at? Accusantium, nostrum? Cumque, nihil. Dolorem temporibus asperiores
+      laborum numquam id cumque magnam autem quibusdam eum? Laudantium quae nisi
+      minus facilis maxime necessitatibus eos harum rerum laboriosam omnis
+      beatae deleniti suscipit, velit odio porro tempora dolore natus optio eum
+      perferendis dolores voluptatem cum temporibus. Incidunt, placeat omnis
+      consectetur quaerat sint, asperiores veniam dolorem mollitia beatae ex eum
+      commodi ea ducimus hic laborum fugit voluptate facere explicabo itaque!
+      Perspiciatis magnam nemo labore fugiat esse dolor! Labore laudantium
+      delectus ipsa explicabo iusto excepturi magnam nobis, nesciunt quaerat?
+      Iure voluptates quod ipsam ut ea nisi, eaque beatae, repellat, qui
+      adipisci distinctio laborum iste ad deserunt exercitationem deleniti quas
+      eos quo repellendus ex consequuntur quisquam. Vitae quidem soluta iste
+      omnis doloremque unde! Blanditiis vero corrupti explicabo optio
+      voluptatibus sed quia earum at, est, facere rem, perferendis odit eligendi
+      numquam maiores soluta iste quo enim. Assumenda totam optio id
+      perspiciatis accusantium voluptate labore nulla quos autem voluptatibus
+      illum saepe tenetur possimus hic accusamus laudantium cum quisquam, beatae
+      neque delectus, amet tempora dolores incidunt qui! Ipsa eveniet a
+      reprehenderit, veniam deserunt doloremque! Excepturi nisi suscipit quo?
+      Asperiores praesentium voluptates facilis beatae alias vel illum ut
+      perspiciatis, quae quibusdam porro architecto totam. Nihil atque,
+      perferendis pariatur rerum laboriosam doloribus porro suscipit incidunt
+      ratione recusandae obcaecati omnis maxime non eveniet aspernatur ad vel
+      corrupti quidem voluptas distinctio quos harum saepe quo facilis. Esse
+      delectus eaque quidem neque eius. Deserunt et consequuntur veritatis
+      asperiores obcaecati soluta cumque culpa! Eligendi magnam voluptatibus
+      repellendus veritatis incidunt deserunt, vero enim excepturi saepe natus,
+      neque harum similique, dolore minima dolorem eum optio error tempore? Quod
+      explicabo eos repudiandae nemo, accusantium voluptas praesentium accusamus
+      qui sequi dolores ipsam enim tempora hic veritatis reiciendis odit aliquid
+      minima eaque debitis dicta! Consequatur quo molestias aut nesciunt
+      excepturi nobis, accusamus provident iste voluptate asperiores beatae nam
+      veritatis minima quisquam itaque repellat cum deserunt obcaecati modi quis
+      hic repudiandae? Quas adipisci ipsa, quae nulla reiciendis doloremque
+      nesciunt molestiae corrupti eaque architecto ad voluptas voluptatem quis
+      suscipit dolorem. Sint nihil veritatis ipsum ab? Dolor corporis
+      necessitatibus impedit, vero nostrum quia velit, quas voluptates repellat
+      quisquam odio accusantium eveniet rerum, provident molestiae enim
+      voluptate iusto nobis. Aperiam illo unde pariatur temporibus suscipit hic
+      eaque doloremque veniam vitae quia odio repellat doloribus, aliquid
+      distinctio facilis ipsam laudantium dignissimos harum odit omnis est
+      officia accusantium iste. Deleniti veritatis iure aperiam. Et quo
+      obcaecati doloremque dolor deleniti. Earum, corporis! Harum quod esse unde
+      maxime sunt ea cumque velit dolorem. Aliquam, consequuntur fugiat iure ea
+      eos ex asperiores id delectus explicabo corrupti alias molestias doloribus
+      nisi placeat nam culpa! Possimus neque ducimus aspernatur in ea nemo a
+      dolor pariatur sed, quasi quae natus assumenda ratione consequuntur
+      adipisci doloribus architecto maiores corrupti libero incidunt dicta! Non
+      perspiciatis provident dolore aliquam architecto eos laboriosam. Molestias
+      dolores sapiente perferendis? Enim tenetur tempora culpa molestias fuga
+      voluptatum sit ducimus ea ex praesentium dolore inventore beatae, a
+      consectetur libero quo, dolorem vel. Sint, laudantium recusandae
+      repudiandae esse numquam doloremque eveniet eligendi nulla harum repellat
+      asperiores minima magni quisquam vel perspiciatis quas autem accusamus
+      beatae. Libero obcaecati exercitationem eveniet culpa explicabo quos, aut
+      amet, ratione aliquid quaerat nostrum doloribus. Aliquam sunt iusto
+      voluptatem ducimus cum excepturi facere tempora cumque! Rem, praesentium
+      inventore voluptate et a explicabo odit doloremque dolorem? Aliquid
+      repudiandae accusantium dicta dolorum eius sunt, consequatur alias qui
+      quod, rem repellat nam, ea inventore! Hic vero debitis vel consequuntur,
+      est voluptatibus delectus deleniti dolore veniam officia, quaerat
+      excepturi iure ipsa similique consequatur quisquam. Expedita non, maxime
+      maiores quisquam, in corrupti, explicabo ratione dolores molestiae
+      asperiores necessitatibus consequuntur. Quam recusandae consectetur quia
+      aperiam ea error quae dignissimos. Nulla, temporibus eius? Dolorum
+      deleniti tempore reiciendis rerum porro labore quasi autem, hic nisi!
+      Earum incidunt, expedita dolorem blanditiis nobis quam consequuntur
+      veniam, alias quidem aperiam laudantium quos illum? Velit, rem
+      accusantium? Quo, dicta molestiae! Cum similique nam voluptate aliquid!
+      Amet quos, deserunt, ratione debitis facere adipisci aliquam veniam
+      consequuntur ullam sit vitae necessitatibus illo eius minus! Tempora
+      facere veritatis at minus, sequi repudiandae facilis velit libero minima
+      sit quaerat mollitia aut vitae obcaecati dolorum corporis nisi illum
+      officiis ducimus laudantium non maxime quos! Autem alias adipisci
+      distinctio fugiat! Nemo ullam repudiandae nam numquam excepturi mollitia
+      est aut consectetur ratione quis, laboriosam in odio itaque deleniti? Iste
+      itaque, fugiat sit facere fuga earum officiis in ad nobis accusamus non
+      deserunt similique corrupti inventore, aperiam perferendis eius
+      repellendus nulla reiciendis optio soluta quod. Vero sed totam aliquid
+      provident dignissimos quibusdam eius dolores autem? Labore dolore
+      voluptate dolor ratione dignissimos, non porro autem odit accusamus,
+      molestiae deserunt cupiditate iste nesciunt alias! Debitis dolores
+      temporibus unde libero itaque quasi quibusdam omnis. Assumenda excepturi
+      illo, non in reiciendis officiis provident quod voluptate, doloremque,
+      dolores beatae voluptatem quaerat soluta incidunt? Voluptate corrupti
+      rerum dolore quod a, asperiores aliquid atque illo possimus? Cumque cum
+      praesentium nam voluptas, quasi minima consequatur in, tenetur cupiditate
+      fuga a quia optio temporibus laboriosam molestiae ipsum? Ipsum dolore
+      necessitatibus cum aut, temporibus fugiat sapiente beatae porro quasi ut.
+      Minus quia itaque veniam? Tenetur omnis facilis fugit unde perferendis
+      quos sint soluta, sequi inventore quas ab quasi eveniet sunt cum natus,
+      commodi dignissimos nam modi amet magni qui nemo ad voluptatem saepe.
+      Aliquam, animi consectetur pariatur hic, dolores a, distinctio accusamus
+      corporis vitae possimus nam sint unde ab saepe iste! Rem laborum culpa
+      aliquam veniam ipsa corporis libero minima doloribus et, cupiditate
+      facilis aliquid.
+    </p>
 
     <script src="01_DOM_events_intro.js"></script>
   </body>
