--- a/14_Events/02_Impossible_Button/impossible_button.html
+++ b/14_Events/02_Impossible_Button/impossible_button.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="app.css" />
     <title>World's Most Annoying Button</title>
+    <style>
+      button {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+      }
+    </style>
   </head>
   <body>
     <button>Try To Click Me</button>
