Update asynch notes

--- a/15_Async_Callbacks_Promises/05_Promises/index.html
+++ b/15_Async_Callbacks_Promises/05_Promises/index.html
@@ -80,6 +80,7 @@
       </div>
     </section>
 
-    <script src="01_promises_intro.js"></script>
+    <!-- <script src="05_promises_intro.js"></script> -->
+    <script src="06_returning_promises.js"></script>
   </body>
 </html>
