--- a/15_Async_Callbacks_Promises/05_Promises/index.html
+++ b/15_Async_Callbacks_Promises/05_Promises/index.html
@@ -82,6 +82,7 @@
 
     <!-- <script src="05_promises_intro.js"></script> -->
     <!-- <script src="06_returning_promises.js"></script> -->
-    <script src="07_resolving_rejecting_with_values.js"></script>
+    <!-- <script src="07_resolving_rejecting_with_values.js"></script> -->
+    <script src="08_promise_chaining.js"></script>
   </body>
 </html>
