Update promise notes

--- a/15_Async_Callbacks_Promises/05_Promises/index.html
+++ b/15_Async_Callbacks_Promises/05_Promises/index.html
@@ -84,5 +84,6 @@
     <!-- <script src="06_returning_promises.js"></script> -->
     <!-- <script src="07_resolving_rejecting_with_values.js"></script> -->
     <script src="08_promise_chaining.js"></script>
+    <script src="09_refactoring_promises.js"></script>
   </body>
 </html>
