--- a/16_HTTP_Requests/index.html
+++ b/16_HTTP_Requests/index.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTTP Requests</title>
   </head>
-  <body></body>
+  <body>
+    <script src="02_XMLHttpRequests.js"></script>
+  </body>
 </html>
