Add fetch notes

--- a/16_HTTP_Requests/index.html
+++ b/16_HTTP_Requests/index.html
@@ -6,6 +6,7 @@
     <title>HTTP Requests</title>
   </head>
   <body>
-    <script src="02_XMLHttpRequests.js"></script>
+    <!-- <script src="02_XMLHttpRequests.js"></script> -->
+    <script src="03_fetch.js"></script>
   </body>
 </html>
