Add axios notes

--- a/16_HTTP_Requests/index.html
+++ b/16_HTTP_Requests/index.html
@@ -6,7 +6,9 @@
     <title>HTTP Requests</title>
   </head>
   <body>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- <script src="02_XMLHttpRequests.js"></script> -->
-    <script src="03_fetch.js"></script>
+    <!-- <script src="03_fetch.js"></script> -->
+    <script src="04_axios.js"></script>
   </body>
 </html>
