--- a/17_Async_Await/index.html
+++ b/17_Async_Await/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="01_async_keyword.js"></script>
+    <!-- <script src="01_async_keyword.js"></script> -->
+    <script src="02_await_keyword.js"></script>
   </body>
 </html>
