Add await parallel/sequential notes

--- a/17_Async_Await/index.html
+++ b/17_Async_Await/index.html
@@ -10,6 +10,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- <script src="01_async_keyword.js"></script> -->
     <!-- <script src="02_await_keyword.js"></script> -->
-    <script src="03_multi_awaits.js"></script>
+    <!-- <script src="03_multi_awaits.js"></script> -->
+    <script src="04_parallel_sequential_requests.js"></script>
   </body>
 </html>
