Add constructor function notes

--- a/18_JS_OOP/index.html
+++ b/18_JS_OOP/index.html
@@ -8,5 +8,6 @@
   <body>
     <!-- <script src="01_prototypes.js"></script> -->
     <script src="02_factory_functions.js"></script>
+    <script src="03_constructor_functions.js"></script>
   </body>
 </html>
