--- a/18_JS_OOP/index.html
+++ b/18_JS_OOP/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <!-- <script src="01_prototypes.js"></script> -->
-    <script src="02_factory_functions.js"></script>
-    <script src="03_constructor_functions.js"></script>
+    <!-- <script src="02_factory_functions.js"></script> -->
+    <!-- <script src="03_constructor_functions.js"></script> -->
+    <script src="04_classes.js"></script>
   </body>
 </html>
