Add subclasses notes

--- a/18_JS_OOP/index.html
+++ b/18_JS_OOP/index.html
@@ -10,5 +10,6 @@
     <!-- <script src="02_factory_functions.js"></script> -->
     <!-- <script src="03_constructor_functions.js"></script> -->
     <script src="04_classes.js"></script>
+    <script src="05_subclasses.js"></script>
   </body>
 </html>
