--- a/20_Drawing_Animations/index.html
+++ b/20_Drawing_Animations/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
   </head>
   <body>
+    <input type="text" id="duration" />
+    <button id="start-btn">Start</button>
+    <button id="pause-btn">Pause</button>
     <script src="index.js"></script>
   </body>
 </html>
