--- a/20_Drawing_Animations/index.html
+++ b/20_Drawing_Animations/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <input type="text" id="duration" />
+    <input type="text" id="duration" value="30" />
     <button id="start-btn">Start</button>
     <button id="pause-btn">Pause</button>
 
