--- a/20_Drawing_Animations/index.html
+++ b/20_Drawing_Animations/index.html
@@ -10,6 +10,7 @@
     <button id="start-btn">Start</button>
     <button id="pause-btn">Pause</button>
 
+    <script src="timer.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
