--- a/20_Drawing_Animations/index.html
+++ b/20_Drawing_Animations/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    <input type="text" id="duration" value="30" />
+    <svg height="200" width="200">
+      <circle r="20" cx="30" cy="30"></circle>
+    </svg>
+    <input type="text" id="duration" value="60" />
     <button id="start-btn">Start</button>
     <button id="pause-btn">Pause</button>
 
