Amimate timer countdown circle

--- a/20_Drawing_Animations/index.html
+++ b/20_Drawing_Animations/index.html
@@ -6,9 +6,18 @@
     <title>Document</title>
   </head>
   <body>
-    <svg height="200" width="200">
-      <circle r="20" cx="30" cy="30"></circle>
+    <svg height="400" width="400">
+      <circle
+        r="190"
+        cx="200"
+        cy="200"
+        fill="transparent"
+        stroke="teal"
+        stroke-width="8"
+        transform="rotate(-90, 200 200)"
+      ></circle>
     </svg>
+
     <input type="text" id="duration" value="60" />
     <button id="start-btn">Start</button>
     <button id="pause-btn">Pause</button>
