--- a/20_Drawing_Animations/index.html
+++ b/20_Drawing_Animations/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="app.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+    />
   </head>
   <body>
-    <svg height="400" width="400">
-      <circle
-        r="190"
-        cx="200"
-        cy="200"
-        fill="transparent"
-        stroke="teal"
-        stroke-width="8"
-        transform="rotate(-90, 200 200)"
-      ></circle>
-    </svg>
-
-    <input type="text" id="duration" value="60" />
-    <button id="start-btn">Start</button>
-    <button id="pause-btn">Pause</button>
+    <div class="container">
+      <div class="timer">
+        <div class="controls">
+          <input id="duration" value="10" />
+          <div class="buttons">
+            <button id="start-btn"><i class="fas fa-play"></i></button>
+            <button id="pause-btn"><i class="fas fa-pause"></i></button>
+          </div>
+        </div>
+        <svg class="dial">
+          <circle
+            fill="transparent"
+            stroke="teal"
+            stroke-width="15"
+            r="190"
+            cx="0"
+            cy="200"
+            transform="rotate(-90 100 100)"
+          />
+        </svg>
+      </div>
+    </div>
 
     <script src="timer.js"></script>
     <script src="index.js"></script>
