--- a/21_Application_Design_Patterns/index.html
+++ b/21_Application_Design_Patterns/index.html
@@ -24,9 +24,11 @@
           </h1>
         </div>
       </div>
+      <img src="" />
     </section>
     <div class="container">
       <input type="text" />
+      <div id="target"></div>
     </div>
     <script src="utils.js"></script>
     <script src="index.js"></script>
