--- a/21_Application_Design_Patterns/index.html
+++ b/21_Application_Design_Patterns/index.html
@@ -27,8 +27,7 @@
       <img src="" />
     </section>
     <div class="container">
-      <input type="text" />
-      <div id="target"></div>
+      <div class="autocomplete"></div>
     </div>
     <script src="utils.js"></script>
     <script src="index.js"></script>
