--- a/21_Application_Design_Patterns/index.html
+++ b/21_Application_Design_Patterns/index.html
@@ -24,13 +24,15 @@
           </h1>
         </div>
       </div>
-      <img src="" />
     </section>
     <div class="container">
-      <div class="autocomplete"></div>
+      <div class="autocomplete-1"></div>
+      <div class="autocomplete-2"></div>
+      <div class="autocomplete-3"></div>
       <div id="summary"></div>
     </div>
     <script src="utils.js"></script>
+    <script src="autocomplete.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
