--- a/23_Secret_Messages/index.html
+++ b/23_Secret_Messages/index.html
@@ -10,6 +10,17 @@
     />
   </head>
   <body>
+    <div class="row">
+      <div class="col s8 offset-s2">
+        <div class="card-panel">
+          <form>
+            <label>Enter a Secret Message:</label>
+            <input type="text" />
+            <button class="btn">Submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
