Base64 encode entered string

--- a/23_Secret_Messages/index.html
+++ b/23_Secret_Messages/index.html
@@ -14,10 +14,17 @@
       <div class="col s8 offset-s2">
         <div class="card-panel">
           <form>
-            <label>Enter a Secret Message:</label>
-            <input type="text" />
+            <label for="message-input"
+              >Enter a Secret Message:
+              <input id="message-input" type="text" />
+            </label>
             <button class="btn">Submit</button>
           </form>
+        </div>
+
+        <div>
+          Share this link with a friend!
+          <input id="link-input" type="text" />
         </div>
       </div>
     </div>
